[package]
name = "qtun-controller"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "qtun-controller"
path = "src/main.rs"

[dependencies]
teloxide = { version = "0.12", default-features = false, features = ["macros", "rustls", "ctrlc_handler"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
anyhow = "1"
log = "0.4"
pretty_env_logger = "0.5"
dptree = "0.3"
toml = "0.8"
libc = "0.2"
axum = "0.7"
